--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     runtime-versions:
       nodejs: 10
     commands:
-      - echo "installing something"
+      - echo "installing something intreasting"
   pre_build:
     commands:
       - echo "we are in the pre build phase"
