--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,12 +10,14 @@ phases:
     commands:
       - echo "we are in the pre build phase"
       - npm install
+      - npm install pm2@latest -g
   build:
     commands:
       - echo "we are in the build block"
-      - npm start index.js
+      - pm2 start index.js --name node_server
       - echo "we will run some tests"
       - grep -Fq "Cities" index.js
+      - pm2 stop node_server
   post_build:
     commands:
       - echo "we are in the post build phase"
